src/global.css
@tailwind base;

@layer base {
    :root {
        --pacificBlue: #46b4c7;
        --ming: #256d7a;
        --cedarChest: #c76350;
        --mantis: #5ac75f;
        --fernGreen: #3d7a40;
        --white: #fff;
        --honeydew: #d6ead7;
        --black: #000;
    }
}

@tailwind components;

@layer components {
    .link,
    .prose .link {
        color: var(--black);
        line-height: 1;
        padding: 0.5rem;
        background: linear-gradient(
            to bottom,
            var(--mantis) 0%,
            var(--mantis) 100%
        );
        background-position: 0 100%;
        background-repeat: repeat-x;
        background-size: 2px 2px;
        transition: background-size 0.15s ease-out;
        text-decoration: none;
    }

    .link:hover,
    .prose .link:hover {
        background-size: 2px 100%;
    }

    .prose .link {
        padding: 0.1rem;
    }
}

@tailwind utilities;

